vibecrafted-app/tui-agent/tests/snapshots/mission_control_snapshots__mission_control_tab_aicx_probe.snap
---
source: tui-agent/tests/mission_control_snapshots.rs
expression: buffer_text(&buffer)
---
Vibecrafted operator  Console  no live runs loaded
workspace: repo  |  active 0  stalled 0  |  scope: live  |  Mission Control
┌Surface───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Monitor live 0 │ Dispatch workflow/claude │ Controls 4 │ Mission 0|0                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Active dispatches─────────────────────┐┌History (30d)─────────────────────────┐┌Mission posture───────────────────────┐
│0 running                             ││0 derived runs scanned                ││model parity 0/1                      │
│0 stalled queue items                 ││0 agents · 0 skills                   ││duration parity 0/1                   │
│                                      ││                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘
┌ Active dispatches (0) ───────────────────────────────────┐┌ Wave atlas (0) ──────────────────────────────────────────┐
│no live dispatches                                        ││no waves in the last 30d                                  │
│                                                          ││                                                          │
│Launch a worker from the Dispatch tab to populate this    ││Waves emerge from prompt_id groups on derived runs.       │
│panel.                                                    ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
┌ Per-agent stats (30d, 0 agents) ───────────────────────────────┐┌ Per-skill stats (0) ───────────────────────────────┐
│no agent activity in window                                     ││no skill invocations in window                      │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
│                                                                ││                                                    │
└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
┌ Fleet health (1) ─────────────────────┐┌ Failure board 24h (0) ──────────────┐┌ Operator action queue (0) ───────────┐
│! aicx index        index_freshness: s…││no failures in window                ││nothing to press                      │
│                                       ││                                     ││                                      │
│                                       ││                                     ││                                      │
│                                       ││                                     ││                                      │
│                                       ││                                     ││                                      │
└───────────────────────────────────────┘└─────────────────────────────────────┘└──────────────────────────────────────┘
┌ Mission Control receipt ─────────────────────────────────────────────────────────────────────────────────────────────┐
│artifact root: unset                                                                                                  │
│generated at:  2026-06-10T12:00:00+00:00                                                                              │
│artifact root missing — only live runs feed this dashboard                                                            │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Mission Control: click a panel  wheel that pane  ↑/↓ focus  r refresh
Global: q quit  r refresh  a cycle agent  v cycle runtime  y copy  Ctrl+L clear search  ? help
state root: /fixture/state
