vibecrafted-app/tui-agent/tests/snapshots/mission_control_snapshots__mission_control_tab_disk_probe_colors.snap
---
source: tui-agent/tests/mission_control_snapshots.rs
expression: buffer_color_map(&buffer)
---
YYYYYYYYYYYYYYYYYYYYddddddddd..ggggggggggggggggggg......................................................................
dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggYYYYYYYYYYYgggggggggggggggggggggggggggggggggggggggggggggggggg
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
.GGGGGGGGGGGGGGGGGGG.....................CCCCCCCCCCCCCCC.........................MMMMMMMMMMMMMMMMM......................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
YGGGGGGGGGGGGGGGGGGGGGGGYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY.CCCCCCCCCCCCCCCC...........................................
Ydddddddddddddddddd........................................Y.dddddddddddddddddddddddd...................................
Y..........................................................Y............................................................
Y..........................................................Y............................................................
Y..........................................................Y............................................................
Y..........................................................Y............................................................
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY............................................................
.YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY.................................BBBBBBBBBBBBBBBBBBBBB................................
.ddddddddddddddddddddddddddd.......................................dddddddddddddddddddddddddddddd.......................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
.MMMMMMMMMMMMMMMMMM.......................RRRRRRRRRRRRRRRRRRRRRRR................WWWWWWWWWWWWWWWWWWWWWWWWWWW............
.RR..................ddddddddd............ddddddddddddddddddddd..................dddddddddddddddd.......................
.RR..................ddddddddddddddddddd................................................................................
.YY..................dddddddddd.........................................................................................
.GG..................dddddddddd.........................................................................................
........................................................................................................................
........................................................................................................................
........................................................................................................................
.ddddddddddddddd........................................................................................................
.ddddddddddddddd........................................................................................................
.YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY.............................................................
........................................................................................................................
........................................................................................................................
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC
dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
